--- a/main.html
+++ b/main.html
@@ -11,6 +11,22 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<nav class="nav">
+		<ul>
+			<li>
+				<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" alt="video">Home</a>
+			</li>
+			<li>
+				<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" alt="video">About us</a>
+			</li>
+			<li>
+				<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" alt="video">Contact us</a>
+			</li>
+		</ul>
+	</nav>
+	<video controls width="320" height="200">
+		<source src="" type="video/mp4">
+	</video>
 </body>
 
 </html>
