--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		</ul>
 	</nav>
 	<video controls width="320" height="200">
-		<source src="" type="video/mp4">
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 	</video>
 </body>
 
