--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
 			</li>
 		</ul>
 	</nav>
+	<h1>3 random videos</h1>
 	<video controls width="320" height="200">
 		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
 	</video>
